API Created get coupon by coupon code. Changed url for swagger
